<resources>
    <string name="app_name">FutsApp</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="nome">nome</string>
    <string name="cognome">cognome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="registrati">registrati</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_home">Rubrica</string>
    <string name="title_dashboard">Gruppi</string>
    <string name="title_notifications">Crea</string>
    <string name="organizzatore">organizzatore:</string>
    <string name="casa">CASA</string>
    <string name="trasferta">TRASFERTA</string>
    <string name="ospiti">OSPITI</string>
    <string name="euro">€</string>
    <string name="futsapp">FutsApp</string>
    <string name="please_connect_to_internet">Connetti ad internet per favore</string>
</resources>
