<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_default"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bungee_inline"
        android:text="accedi"
        android:textAlignment="center"
        android:textColor="@color/c1"
        android:textSize="50sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"

        android:layout_marginTop="50dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_text"
            android:id="@+id/text_email"
            android:textColor="#000000"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"

        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_password"
            android:textColor="#000000"
            android:background="@drawable/border_text"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_button"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/azzurro" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
    <TextView
        android:id="@+id/LinkReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Non sei ancora registrato?"
        android:layout_above="@+id/button_reg"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:textColor="@color/c1"

        />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/button_reg"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_button"
        android:textColor="@color/azzurro"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="Registrati"
        android:onClick="registra"/>
    </RelativeLayout>

</LinearLayout>
